        exploratory ANOVAs (see Cramer, et al., 2015; PB&R). Functionality 
        contributed by Frederik Aust (https://github.com/singmann/afex/pull/3).
        
    Bugfixes
    
    o   ANOVA functions work with dplyr data.frames now (data is transformed
        via as.data.frame). See: https://github.com/singmann/afex/issues/6
    
    o   
    

    
 
                    *************************
                    ** afex VERSION 0.14-x **
                    *************************
                    
                    Changes in afex Version 0.14-x
                    Released August 2015

    Significant User Visible Changes and New Features

    o   new default return argument for ANOVA functions, afex_aov, 
        an S3 object containing the following:
        (1) ANOVA table of class "anova"
        (2) ANOVA fitted with base R's aov (can be passed to lsmeans 
            for post-hoc tests)
        (3) output from car::Anova (for tests of effects),
            ANOVA table (1) is based on this model
        (4) lm object passed to car::Anova
        (5) data used for estimating (2) and (4)
        
    o   added support for lsmeans: objects of class afex_aov can be 
        passed to lsmeans directly. afex now depends on lsmeans.
    
    o   added afex_options() functionality for setting options globally.
    
    o   added expand_re argument to mixed which, if TRUE, correctly interprets 
        the || notation in random effects with factors (i.e., suppresses 
        estimation of correlation among random effects). lmer_alt is a wrapper
        for mixed which uses expand_re = TRUE, returns an object of class
        merMod (i.e., does not calculate p-values), and otherwise behaves 
        like g/lmer (i.e., does not enforce certain contrasts)
    
    o   added three new data sets (Singmann & Klauer, 2011; Klauer & 
        Singmann, 2013) and a vignette showing how to calculate 
        contrasts after ANOVA.
    